force-app/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Delivery_Time__c</fullName>
    <label>Estimated Delivery Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>