force-app/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__EmailMessage__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EmailMessage__c</fullName>
    <label>Email Message</label>
    <type>TextArea</type>
</CustomField>