force-app/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__NegotiatedRatesGrandTotal__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__NegotiatedRatesGrandTotal__c</fullName>
    <label>Negotiated Rates Grand Total</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>