force-app/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__Recipient_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Recipient_Zip_Postal_Code__c</fullName>
    <label>Recipient Zip/Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>