force-app/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__Reference4_Type__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Reference4_Type__c</fullName>
    <label>Reference 4 Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>