force-app/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__Shipment_Type__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Shipment_Type__c</fullName>
    <label>Shipment Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>