force-app/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>