force-app/main/default/objects/zkmulti__MCShipment__c/recordTypes/zkmulti__Default.recordType-meta.xml
<RecordType>
    <fullName>zkmulti__Default</fullName>
    <active>true</active>
    <label>Default</label>
</RecordType>