force-app/main/default/objects/zkmulti__MCShipment__c/recordTypes/zkmulti__OnDemand.recordType-meta.xml
<RecordType>
    <fullName>zkmulti__OnDemand</fullName>
    <active>true</active>
    <label>OnDemand</label>
</RecordType>