force-app/main/default/objects/zkmulti__MCShipment__c/listViews/zkmulti__All.listView-meta.xml
<ListView>
    <fullName>zkmulti__All</fullName>
    <columns>zkmulti__Bulk_Shipment__c</columns>
    <columns>NAME</columns>
    <columns>zkmulti__Carrier__c</columns>
    <columns>zkmulti__Shipment_Deleted__c</columns>
    <columns>zkmulti__Return_Shipment__c</columns>
    <columns>zkmulti__Delivered__c</columns>
    <columns>zkmulti__Tracking_Number__c</columns>
    <columns>zkmulti__Label_Image_Type__c</columns>
    <columns>zkmulti__Ship_Date__c</columns>
    <columns>zkmulti__Package_Type__c</columns>
    <columns>zkmulti__Service_Type_Name__c</columns>
    <columns>zkmulti__Recipient_Account__c</columns>
    <columns>zkmulti__Recipient_Opportunity__c</columns>
    <columns>zkmulti__Recipient_Lead__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>