force-app/main/default/objects/zkmulti__MCShipment__c/listViews/zkmulti__Bringg_On_Demand.listView-meta.xml
<ListView>
    <fullName>zkmulti__Bringg_On_Demand</fullName>
    <columns>NAME</columns>
    <columns>zkmulti__Tracking_Number__c</columns>
    <columns>zkmulti__Carrier__c</columns>
    <columns>zkmulti__Delivery_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>zkmulti__MCShipment__c.zkmulti__OnDemand</value>
    </filters>
    <label>Bringg On Demand</label>
</ListView>